@@ -80,6 +80,8 @@ ENABLE_IP2COUNTRY_TRUE = @ENABLE_IP2COUNTRY_TRUE@
 ENABLE_UPNP_FALSE = @ENABLE_UPNP_FALSE@
 ENABLE_UPNP_TRUE = @ENABLE_UPNP_TRUE@
 EXEEXT = @EXEEXT@
+FILEVIEW_FALSE = @FILEVIEW_FALSE@
+FILEVIEW_TRUE = @FILEVIEW_TRUE@
 GDLIB_CFLAGS = @GDLIB_CFLAGS@
 GDLIB_CONFIG_PATH = @GDLIB_CONFIG_PATH@
 GDLIB_LDFLAGS = @GDLIB_LDFLAGS@
